--- a/package.json
+++ b/package.json
@@ -1,17 +1,18 @@
 {
   "name": "@b2wdigital/restql-manager",
-  "version": "0.1.6",
+  "version": "0.1.7",
   "dependencies": {
     "@types/react-sidebar": "^2.2.2",
     "body-parser": "^1.18.2",
     "bootstrap": "^3.3.7",
     "codemirror": "^5.31.0",
-    "cross-fetch": "^1.1.0",
     "es6-promise": "^4.1.1",
     "express": "^4.16.2",
     "font-awesome": "^4.7.0",
+    "isomorphic-fetch": "^2.2.1",
     "mongoose": "^4.12.4",
     "mongoose-map": "^1.1.0",
+    "node-fetch": "^2.3.0",
     "prop-types": "^15.6.0",
     "react": "^15.6.1",
     "react-bootstrap": "^0.31.5",
