--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.14",
     "react-sidebar": "^2.3.2",
+    "react-svg": "^7.2.6",
     "redux": "^3.7.2"
   },
   "bin": {
