--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "@b2wdigital/restql-manager",
   "version": "0.2.8",
+  "engines": {
+    "node": "10.15.0"
+  },
   "dependencies": {
     "@types/react-sidebar": "^2.2.2",
     "body-parser": "^1.18.2",
