--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-scripts": "4.0.2",
+    "react-select": "4.1.0",
     "typescript": "4.1.2",
     "web-vitals": "1.0.1"
   },
@@ -44,6 +45,7 @@
   },
   "devDependencies": {
     "@types/codemirror": "0.0.108",
+    "@types/react-select": "4.0.13",
     "tslint": "6.1.3",
     "tslint-config-prettier": "1.18.0",
     "tslint-plugin-prettier": "2.3.0",
