--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "normalize.css": "8.0.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "react-json-view": "1.21.1",
     "react-scripts": "4.0.2",
     "react-select": "4.1.0",
     "typescript": "4.1.2",
