--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/react": "17.0.0",
     "@types/react-dom": "17.0.0",
     "@uiw/react-codemirror": "3.0.5",
+    "axios": "0.21.1",
     "node-sass": "5.0.0",
     "normalize.css": "8.0.1",
     "react": "17.0.1",
