--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-json-view": "1.21.1",
+    "react-modal": "3.12.1",
     "react-scripts": "4.0.2",
     "react-select": "4.1.0",
     "typescript": "4.1.2",
@@ -47,6 +48,7 @@
   },
   "devDependencies": {
     "@types/codemirror": "0.0.108",
+    "@types/react-modal": "3.12.0",
     "@types/react-select": "4.0.13",
     "tslint": "6.1.3",
     "tslint-config-prettier": "1.18.0",
