--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "17.0.1",
     "react-json-view": "1.21.1",
     "react-modal": "3.12.1",
+    "react-router-dom": "5.2.0",
     "react-scripts": "4.0.2",
     "react-select": "4.1.0",
     "typescript": "4.1.2",
@@ -49,6 +50,7 @@
   "devDependencies": {
     "@types/codemirror": "0.0.108",
     "@types/react-modal": "3.12.0",
+    "@types/react-router-dom": "5.1.7",
     "@types/react-select": "4.0.13",
     "tslint": "6.1.3",
     "tslint-config-prettier": "1.18.0",
