--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-router-dom": "5.2.0",
     "react-scripts": "4.0.2",
     "react-select": "4.1.0",
+    "react-window": "1.8.6",
     "typescript": "4.1.2",
     "web-vitals": "1.0.1"
   },
@@ -52,6 +53,7 @@
     "@types/react-modal": "3.12.0",
     "@types/react-router-dom": "5.1.7",
     "@types/react-select": "4.0.13",
+    "@types/react-window": "1.8.2",
     "tslint": "6.1.3",
     "tslint-config-prettier": "1.18.0",
     "tslint-plugin-prettier": "2.3.0",
