--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "0.21.1",
     "node-sass": "5.0.0",
     "normalize.css": "8.0.1",
+    "qs": "6.10.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-json-view": "1.21.1",
@@ -50,6 +51,7 @@
   },
   "devDependencies": {
     "@types/codemirror": "0.0.108",
+    "@types/qs": "6.9.6",
     "@types/react-modal": "3.12.0",
     "@types/react-router-dom": "5.1.7",
     "@types/react-select": "4.0.13",
