--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "@types/react-dom": "17.0.0",
     "@uiw/react-codemirror": "3.0.5",
     "axios": "0.21.3",
-    "node-sass": "9.0.0",
     "normalize.css": "8.0.1",
     "qs": "6.11.2",
     "react": "17.0.1",
@@ -19,9 +18,10 @@
     "react-json-view": "1.21.1",
     "react-modal": "3.12.1",
     "react-router-dom": "5.2.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "4.0.3",
     "react-select": "4.1.0",
     "react-window": "1.8.6",
+    "sass": "1.68.0",
     "typescript": "4.1.2",
     "web-vitals": "1.0.1"
   },
