--- a/package.json
+++ b/package.json
@@ -2,6 +2,12 @@
   "name": "restql-manager",
   "version": "2.2.1",
   "dependencies": {
+    "@codemirror/basic-setup": "0.20.0",
+    "@codemirror/commands": "6.3.0",
+    "@codemirror/lang-javascript": "6.2.1",
+    "@codemirror/language": "6.9.1",
+    "@lezer/highlight": "1.1.6",
+    "@lezer/javascript": "1.4.7",
     "@testing-library/jest-dom": "5.11.4",
     "@testing-library/react": "11.1.0",
     "@testing-library/user-event": "12.8.3",
@@ -9,8 +15,10 @@
     "@types/node": "12.20.46",
     "@types/react": "17.0.39",
     "@types/react-dom": "17.0.0",
-    "@uiw/react-codemirror": "3.0.5",
+    "@uiw/react-codemirror": "^4.21.18",
     "axios": "0.21.3",
+    "codemirror": "6.0.1",
+    "lezer-generator": "0.13.4",
     "normalize.css": "8.0.1",
     "qs": "6.11.2",
     "react": "17.0.1",
@@ -18,7 +26,7 @@
     "react-json-view": "1.21.1",
     "react-modal": "3.12.1",
     "react-router-dom": "5.2.0",
-    "react-scripts": "4.0.3",
+    "react-scripts": "5.0.1",
     "react-select": "4.1.0",
     "react-window": "1.8.6",
     "sass": "1.68.0",
